--- a/memo/20191016.md
+++ b/memo/20191016.md
@@ -219,3 +219,501 @@ posting_detail.html
 
  https://fontawesome.com/icons/angrycreative?style=brands 
 
+
+
+forms.py
+
+```python
+from django import forms
+from .models import Posting
+
+class PostingModelForm(forms.ModelForm):  # 이름 짓기 나름 / data의 입력과 검증 & HTML
+    content = forms.CharField(min_length=2)
+    class Meta:  # Meta는 예약어
+        model = Posting
+        fields = ('content', 'image')
+```
+
+
+
+_header.html
+
+```html
+<header class="mt-4">
+    <form action="{% url 'sns:create_posting' %}" enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        <div class="form-row align-items center">
+            <div class="col-auto my-1">
+                <!-- icon select tag -->
+                <label for="icon" class="sr-only">icon</label>            
+                <select name="icon" id="icon" class="custom-select mr-sm-2">
+                    <option value="fas fa-question">?</option>
+                    <option value="far fa-smile">:)</option>
+                    <option value="far fa-angry">:(</option>
+                    <option value="far fa-smile-wink">;)</option>
+                    <option value="fab fa-angrycreative">flex</option>
+                </select>
+            </div>
+            <!-- content input tag -->
+            <div class="col-sm-6 my-1">
+                <label for="content" class="sr-only">content</label>
+                <input id="content" type='text' name='content' class="form-control" placeholder="feels like..">
+            </div>
+           
+            <!-- image file input -->
+            <div class="col-sm-4 my-1 input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">Upload</span>
+                </div>
+
+                <div class="custom-file">
+                    <input id="image" class="custom-file-input" name="image" type="file" accept="image/*">
+                    <label for="image" class="custom-file-label">Choose image</label>
+                </div>
+            </div>
+
+            <!-- submit button -->
+            <div class="col-auto my-1">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
+    </form>
+</header>
+
+```
+
+
+
+forms.py
+
+```python
+from django import forms
+from .models import Posting
+
+class PostingModelForm(forms.ModelForm):  # 이름 짓기 나름 / data의 입력과 검증 & HTML
+    content = forms.CharField(min_length=2)
+    class Meta:  # Meta는 예약어
+        model = Posting
+        fields = ('content', 'image', 'icon')
+```
+
+
+
+posting_detail.html - 수정
+
+```html
+<i class="{{ posting.icon }} fa-3x"></i>
+```
+
+`python manage.py migrate sns zero`
+
+`python manage.py migrate`
+
+
+
+_card.html - i태그 추가
+
+```html
+<div class="card-body">
+    <i class="fa-2x {{ posting.icon }}"></i>
+</div>
+```
+
+
+
+_card.html
+
+```html
+<article class="card mb-3">
+    <a href="{{ posting.get_absolute_url }}">
+        {% if posting.image %}
+            <img src="{{ posting.image.url }}" alt="{{ posting.image }}" class="card-img-top image-fluid">
+        {% else %}
+            <img src="http://picsum.photos/500/200" alt="random-image-{{ forloop.counter }}" class="card-img-top image-fluid">
+            {% comment %} <img src="https://picsum.photos/seed/picsum/200/300" alt="random-image"> {% endcomment %}
+        {% endif %}                    
+    </a>
+    <div class="card-body">
+        <i class="fa-2x {{ posting.icon }}"></i>
+    </div>
+</article>
+```
+
+posting_list.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+{% block body %}
+
+{% include 'sns/_header.html' %}
+
+{% if postings %}
+    <section class="card-columns">
+        {% for posting in postings %}
+            {% include 'sns/_card.html' %}
+        {% endfor %}
+    </section>
+{% endif %}
+{% endblock %}
+```
+
+
+
+base.html - 스타일태그 추가
+
+```html
+<style>
+    body {
+        background-color: #edd1d8!important;
+    }
+
+    @media (min-width: 796px)
+    .card-columns {
+        column-count: 5;
+    }
+</style>
+```
+
+
+
+models.py - 추가
+
+```python
+class Comment(models.Model):
+    posting = models.ForeignKey(Posting, on_delete=models.CASCADE)
+    content = models.CharField(max_length=200)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    class Meta:
+        ordering = ['created_at']  # 생성된 시간 정순
+
+    def __str__(self):
+        return f'{self.id}: {self.content[:10]}'
+```
+
+`python manage.py makemigrations`
+
+`python manage.py migrate`
+
+
+
+forms.py - 추가
+
+```python
+from django import forms
+from .models import Posting, Comment
+```
+
+
+
+```python
+class CommentModelForm(forms.ModelForm):
+    content = forms.CharField(min_length=2, max_length=200)
+    
+    class Meta:
+        model = Comment
+        fields = ('content',)
+```
+
+
+
+views.py - import 부분 추가, delete_posting, create_comment
+
+```python
+from .models import Posting, Comment
+from .forms import PostingModelForm, CommentModelForm
+```
+
+```python
+@require_POST
+def delete_posting(request):
+    pass
+
+
+@require_POST
+def create_comment(request):
+    return redirect('')
+```
+
+
+
+urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'sns'
+
+urlpatterns = [
+    path('', views.posting_list, name='posting_list'),
+    path('<int:posting_id>/', views.posting_detail, name='posting_detail'),
+    path('create/', views.create_posting, name='create_posting'),
+    path('<int:posting_id>/delete', views.delete_posting, name='delete_posting'),
+    path('<int:posting_id>/comments/create/', views.create_comment, name='create_comment'),
+]
+```
+
+
+
+master url.py
+
+```python
+from django.contrib import admin
+from django.urls import path, include
+
+from django.conf.urls.static import static
+from django.conf import settings  # MASTER_APP/settings.py 불러오기
+
+urlpatterns = [
+    path('admin/', admin.site.urls),
+    path('newsfeed/', include('sns.urls')),  # sns.urls로 포워딩
+    # path('media', '/media/폴더 안에서 이미지를 찾아라.')
+]
+
+urlpatterns += static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)  # 변수화 된 것을. 찾을 곳 / 실제로 저장되는 곳
+```
+
+
+
+views.py
+
+```python
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    form = CommentModelForm(request.POST)  # content 만 값을 확인
+    if form.is_valid():  # content 만 값을 검증
+        comment = form.save(commit=False)  # 아직 posting_id 가 비어있기 때문에, 저장하는 '척' 만 하고 Comment 객체 return
+        # comment.posting_id = posting.id
+        comment.posting = posting  # 위 코드와 같음
+        comment.save()
+    return redirect(posting)
+```
+
+
+
+_comment.html 만들고 posting_detail.html에서 잘라내서 붙이기
+
+```html
+<div class="col-12 col-md-6">
+
+    <div class="card mb-2">
+        <div class="card-body">
+        <form action="#" method="POST">
+            {% csrf_token %}
+            <label for="comment">leave comment</label>
+            <input type="text" name="comment" id="comment" class="form-control">
+        </form>
+        </div>
+    </div>
+
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+        </ul>
+    </div>
+    
+</div>
+```
+
+```html
+<div class="col-12 col-md-6">
+
+    <div class="card mb-2">
+        <div class="card-body">
+        <form action="{% url 'sns:create_comment' posting.id %}" method="POST">
+            {% csrf_token %}
+            <label for="comment">leave comment</label>
+            <input type="text" name="comment" id="comment" class="form-control">
+        </form>
+        </div>
+    </div>
+
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+        </ul>
+    </div>
+
+</div>
+```
+
+
+
+
+
+posting_detail.html에는
+
+```html
+{% include 'sns/_comment.html' %}
+```
+
+
+
+
+
+_comment.html
+
+```html
+<div class="col-12 col-md-6">
+
+    <div class="card mb-2">
+        <div class="card-body">
+            <form action=" url 'sns:create_comment' posting.id %}" method="POST">
+                {% csrf_token %}
+                <label for="comment">leave comment</label>
+                <input type="text" name="content" id="comment" class="form-control">
+            </form>
+        </div>
+    </div>
+
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+        </ul>
+    </div>
+
+</div>
+```
+
+
+
+views.py
+
+```python
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comments = posting.comment_set.all()
+    return render(request, 'sns/posting_detail.html', {
+        'posting': posting,
+    })
+```
+
+
+
+models.py
+
+```python
+class Comment(models.Model):
+    # related_name 이 없으면, posting.comment_set / 아래와 같다면, posting.comments
+    posting = models.ForeignKey(Posting, on_delete=models.CASCADE, related_name='comments')
+    content = models.CharField(max_length=200)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    class Meta:
+        ordering = ['created_at']  # 생성된 시간 정순
+
+    def __str__(self):
+        return f'{self.id}: {self.content[:10]}'
+```
+
+`python manage.py makemigrations`
+
+`python manage.py migrate`
+
+
+
+views.py에서 posting_detail 함수 수정
+
+```python
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comments = posting.comments.all()  # posting.comment_set 이 아닌 이유는 Model => related_name
+    return render(request, 'sns/posting_detail.html', {
+        'posting': posting,
+        'comments': comments,
+    })
+```
+
+
+
+_comment.html
+
+```html
+<div class="col-12 col-md-6">
+
+    <div class="card mb-2">
+        <div class="card-body">
+            <form action="{% url 'sns:create_comment' posting.id %}" method="POST">
+                {% csrf_token %}
+                <label for="comment">leave comment</label>
+                <input type="text" name="content" id="comment" class="form-control" autofocus>
+            </form>
+        </div>
+    </div>
+
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            {% if comments %}
+                {% for comment in comments %}
+                    <li class='list-group-item mb-1'>익명{{forloop.counter}}: {{ comment.content }}</li>
+                {% endfor %}        
+            {% else %}
+                <li class='list-group-item mb-1'>No comments yet..</li>
+            {% endif %}
+    
+        </ul>
+    </div>
+
+</div>
+```
+
+
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+        <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+       {% else %}
+        <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <i class="{{ posting.icon }} fa-3x"></i>
+        <hr>
+        <div class="row">
+            <div class="col-11">
+                <p class="card-text">{{ posting.content }}</p>
+            </div>
+            <div class="col-1">
+                <form action="#" method="POST">
+                    {% csrf_token %}
+                    <button>
+                        <i class="fas fa-trash"></i>                
+                    </button>
+                </form>
+            </div>
+        </div>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
+    </div>
+  </div>
+    
+    {% include 'sns/_comment.html' %}
+
+</div>
+{% endblock %}
+```
+
