20191016 | image_upload | accounts

--- a/memo/20191016.md
+++ b/memo/20191016.md
@@ -717,3 +717,372 @@ posting_detail.html
 {% endblock %}
 ```
 
+
+
+views.py
+
+```python
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('sns:posting_list')
+```
+
+
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block detail %}active{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+        <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+       {% else %}
+        <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <i class="{{ posting.icon }} fa-3x"></i>
+        <hr>
+        <div class="row">
+            <div class="col-11">
+                <p class="card-text">{{ posting.content }}</p>
+            </div>
+            <div class="col-1">
+                <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+                    {% csrf_token %}
+                    <button>
+                        <i class="fas fa-trash"></i>                
+                    </button>
+                </form>
+            </div>
+        </div>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
+    </div>
+  </div>
+    
+    {% include 'sns/_comment.html' %}
+
+</div>
+{% endblock %}
+```
+
+
+
+_navbar.html
+
+```html
+<nav>
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a href="{% url 'sns:posting_list'%}" class="nav-link {% block list %}{% endblock %}">SNS</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link {% block detail %}{% endblock %}" aria-disabled="true">Detail</a>
+    </li>
+  </ul>
+</nav>
+```
+
+
+
+base.html
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <style>
+        body {
+            background-color: #edd1d8!important;
+        }
+
+        @media (min-width: 796px)
+        .card-columns {
+            column-count: 5;
+        }
+    </style>
+
+    {% comment %} <style>
+        body {
+            background-color: black;!important;
+        }
+    </style> {% endcomment %}
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- FonteAwesome icon set -->
+    <script src="https://kit.fontawesome.com/557ed3dfa5.js" crossorigin="anonymous"></script>
+    <title>{% block title %}{% endblock title %}</title>
+</head>
+<body>
+    {% include 'sns/_navbar.html' %}
+    <div class="container">
+        {% block body %}
+        {% endblock body %}
+    </div>
+
+    <!-- Bootstrap JS & Jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
+
+```
+
+
+
+
+
+
+
+
+
+`django-admin startapp accounts`
+
+`cd accounts/`
+
+`touch urls.py`
+
+`mkdir -p templates/accounts/`
+
+`cd templates/accounts/`
+
+`touch signup.html login.html`
+
+`cd -`
+
+`cd ..`
+
+
+
+settings.py
+
+```python
+INSTALLED_APPS = [
+    'django_extensions',
+    'django.contrib.admin',
+    'django.contrib.auth',  # authenticate 인증
+    'django.contrib.contenttypes',
+    'django.contrib.sessions',
+    'django.contrib.messages',
+    'django.contrib.staticfiles',
+    'sns',
+    'accounts',
+]
+```
+
+
+
+master urls.py
+
+```python
+urlpatterns = [
+    path('admin/', admin.site.urls),
+    path('newsfeed/', include('sns.urls')),  # sns.urls로 포워딩
+    # path('media', '/media/폴더 안에서 이미지를 찾아라.')
+    path('accounts/', include('accounts.urls')),
+]
+```
+
+
+
+accounts - urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'accounts'
+
+urlpatterns = [
+    path('signup/', views.signup, name='signup'),
+    path('login/', views.login, name='login'),
+    path('logout/', views.logout, name='logout'),
+]
+```
+
+
+
+accounts - views.py
+
+```python
+from django.shortcuts import render, redirect
+from django.views.decorators.http import require_http_methods
+from django.contrib.auth.forms import UserCreationForm
+
+@require_http_methods(['GET', 'POST'])
+def signup(request):  # new_user
+    # 사용자가 회원가입 할 데이터를 보냈다면,
+    if request.method == 'POST':
+        form = UserCreationForm(request.POST)
+        if form.is_valid():  # 함수 실행.. form이 잘못되면 form에 든 것이 채점됨
+            user = form.save()  # 없어도 됨
+            return redirect('sns:posting_list')
+        else:
+            return render(request, 'accounts/signup.html', {
+                'form': form,  # 채점된 것. 망한 시험지
+            })
+
+    else:  # 사용자가 회원가입 HTML 을 달라는 뜻
+        form = UserCreationForm()  # 새 시험지
+        return render(request, 'accounts/signup.html', {
+            'form': form,  # 새 시험지
+        })
+
+def login(request):
+    pass
+
+def logout(request):
+    pass
+
+```
+
+```python
+from django.shortcuts import render, redirect
+from django.views.decorators.http import require_http_methods
+from django.contrib.auth.forms import UserCreationForm
+
+@require_http_methods(['GET', 'POST'])
+def signup(request):  # new_user
+    # 사용자가 회원가입 할 데이터를 보냈다면,
+    if request.method == 'POST':
+        form = UserCreationForm(request.POST)
+        if form.is_valid():  # 함수 실행.. form이 잘못되면 form에 든 것이 채점됨
+            user = form.save()  # 없어도 됨
+            return redirect('sns:posting_list')
+        # else:
+            # return render(request, 'accounts/signup.html', {
+            #     'form': form,  # 채점된 것. 망한 시험지
+            # })
+
+    else:  # 사용자가 회원가입 HTML 을 달라는 뜻
+        form = UserCreationForm()  # 새 시험지
+        # return render(request, 'accounts/signup.html', {
+        #     'form': form,  # 새 시험지
+        # })
+    return render(request, 'accounts/signup.html', {
+            'form': form,  # 새 시험지
+        })
+
+def login(request):
+    pass
+
+def logout(request):
+    pass
+
+```
+
+accounts - base.html
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- FonteAwesome icon set -->
+    <script src="https://kit.fontawesome.com/557ed3dfa5.js" crossorigin="anonymous"></script>
+
+    <title>{% block title %}{% endblock %}</title>
+</head>
+<body>
+  <div class="container">
+    {% block body %}
+    {% endblock %}
+  </div>
+  <!-- Bootstrap JS & Jquery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    
+</body>
+</html>
+```
+
+
+
+signup.html
+
+```html
+{% extends 'accounts/base.html' %}
+
+{% block title %}Sign up{% endblock %}
+
+{% block body %}
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+{% endblock %}
+```
+
+`pip install django-bootstrap4`
+
+
+
+settings.py
+
+```python
+INSTALLED_APPS = [
+    'bootstrap4',  # 설치: $ pip install django-bootstrap4 / 등록: bootstrap4
+    'django_extensions',
+    'django.contrib.admin',
+    'django.contrib.auth',  # authenticate 인증
+    'django.contrib.contenttypes',
+    'django.contrib.sessions',
+    'django.contrib.messages',
+    'django.contrib.staticfiles',
+    'sns',
+    'accounts',
+]
+```
+
+
+
+signup.html
+
+```html
+{% extends 'accounts/base.html' %}
+{% load bootstrap4 %}
+
+{% block title %}Sign up{% endblock %}
+
+{% block body %}
+    <form method="POST">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <hr>
+        {{ form.as_p }}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Submit</button>
+        {% endbuttons %}
+    </form>
+{% endblock %}
+```
+
+`git add .`
+
+`git commit -m 'add accounts and Signup'`
+
+`git push`
