--- a/memo/20191017.md
+++ b/memo/20191017.md
@@ -354,3 +354,490 @@ def signup(request):  # new_user
         })
 ```
 
+
+
+richard stallman
+
+팀 버너스리
+
+
+
+Chrome - Login <- 브라우저 cookie에 도장
+
+127.0.0.1:8000
+
+cookie <- 쿠키는 보통 expire date가 있음. 털릴 수 있음. 보안X
+
+{user: abcd1234} 열쇠 public key - 서버에서 인증 - DB(테이블 2개 암호화된 값)...
+
+| key                                        | value                            |
+| ------------------------------------------ | -------------------------------- |
+| csrftoken                                  |                                  |
+| sessionid(로그인담당..로그아웃하면 날라감) | mghu0k009wp339si94ci4347yg4bd89q |
+|                                            |                                  |
+|                                            |                                  |
+|                                            |                                  |
+|                                            |                                  |
+|                                            |                                  |
+
+django_session 가보면  mghu0k009wp339si94ci4347yg4bd89q 가 session_key에 있음
+
+
+
+''얄팍한 코딩사전'' 유튜브 - 세션 쿠키
+
+Ctrl + r : 새로고침
+
+Ctrl + Shift + r : 완전히 새로고침
+
+캐싱 : 가져오는데(시간=돈) 돈이 드는 데이터를 가까이 둠
+
+CPU 캐시메모리에 둠 -> 다운시간 0 ms. memory cache
+
+l1 l2 l3 캐시
+
+캐싱된거 
+
+cd AppData/Local/Google/Chrome/User\ Data/Default/Cache 에 있음
+
+쿠키 용량 제한 4KB 이하
+
+
+
+accounts - views.py
+
+```python
+@require_http_methods(['GET', 'POST'])
+def login(request):
+    from IPython import embed; embed()
+    # # if  # 사용자가 login 한 상태라면, 무시
+    # from IPython import embed; embed()
+    # # if request.user.is_authenticated:
+    # from IPython import embed; embed()
+    if request.user.is_authenticated: # 사용자가 login 한 상태라면, 무시
+        return redirect('sns:posting_list')
+
+    if request.method == 'POST':
+        form = AuthenticationForm(request, request.POST)  # form <- 입국신청서
+        if form.is_valid():
+            auth_login(request, form.get_user())
+            response = redirect('sns:posting_list')
+            response.set_cookie(key='nickname', value='idiot', max_age=5)
+            return response
+            # return redirect('sns':posting_list).set_cookie(asdf)  # 이렇게 X 원본파괴
+    else:
+        form = AuthenticationForm()
+    return render(request, 'accounts/login.html', {
+        'form': form,
+    })
+
+```
+
+```python
+@require_http_methods(['GET', 'POST'])
+def login(request):
+    # from IPython import embed; embed()
+    # # if  # 사용자가 login 한 상태라면, 무시
+    # from IPython import embed; embed()
+    # # if request.user.is_authenticated:
+    # from IPython import embed; embed()
+    if request.user.is_authenticated: # 사용자가 login 한 상태라면, 무시
+        return redirect('sns:posting_list')
+
+    if request.method == 'POST':
+        form = AuthenticationForm(request, request.POST)  # form <- 입국신청서
+        if form.is_valid():
+            auth_login(request, form.get_user())
+            response = redirect('sns:posting_list')
+            # response.set_cookie(key='nickname', value='idiot', max_age=5)
+            response.set_cookie(key='nickname', value='idiot')  
+            return response
+            # return redirect('sns':posting_list).set_cookie(asdf)  # 이렇게 X 원본파괴
+    else:
+        form = AuthenticationForm()
+    return render(request, 'accounts/login.html', {
+        'form': form,
+    })
+```
+
+
+
+sns - views.py
+
+```python
+@require_GET
+def posting_list(request):
+    nickname = request.COOKIES.get('nickname')
+    postings = Posting.objects.all()
+    return render(request, 'sns/posting_list.html', {
+        'postings': postings,
+        'nickname': nickname,
+    })
+```
+
+
+
+_navbar.html
+
+```html
+nickname
+```
+
+
+
+sns - views.py
+
+accounts - views.py
+
+nickname 부분 주석처리
+
+
+
+models.py
+
+```python
+class Posting(models.Model):
+    user = models.ForeignKey(settings.AUTH_USER_MODEL, on_delete=models.CASCADE)
+    content = models.TextField()
+    icon = models.CharField(max_length=30, default='')
+    image = models.ImageField(blank=True)  # $ pip install pillow 이미지는 비울 수도 있다
+    created_at = models.DateTimeField(auto_now_add=True)  # 추가될 때만 / add 될 때 / 고정 
+    updated_at = models.DateTimeField(auto_now=True)  # 수정, save 할 때마다
+
+    class Meta:
+        ordering = ['-created_at', ]  # created_at 을 descending 내림차순으로. 생성된 시간 역순
+        
+    # Detail 페이지를 쓸 거라면 만들어요.
+    def get_absolute_url(self):
+        return reverse("sns:posting_detail", kwargs={"posting_id": self.pk})  # id랑 pk 같은 말
+
+    def __str__(self):
+        return f'{self.pk}: {self.content[:20]}'
+```
+
+```python
+class Comment(models.Model):
+    user = models.ForeignKey(settings.AUTH_USER_MODEL, on_delete=models.CASCADE)
+    # related_name 이 없으면, posting.comment_set / 아래와 같다면, posting.comments
+    posting = models.ForeignKey(Posting, on_delete=models.CASCADE, related_name='comments')
+    content = models.CharField(max_length=200)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    class Meta:
+        ordering = ['created_at']  # 생성된 시간 정순
+
+    def __str__(self):
+        return f'{self.id}: {self.content[:10]}'
+```
+
+
+
+settings.py - \# AUTH_USER_MODEL = 'auth.User' 숨겨져있음
+
+```python
+# AUTH_USER_MODEL = 'auth.User'
+```
+
+
+
+models.py
+
+```python
+from django.conf import settings  # MASTER_APP/settings.py
+```
+
+
+
+plus_shell에서 확인
+
+from django.conf import settings
+
+settings.MEDIA_URL
+
+settings.MEDIA_ROOT
+
+settings.AUTH_USER_MODEL
+
+
+
+`python manage.py migrate sns zero`
+
+`python manage.py`
+
+`rm sns/migrations/0*`
+
+`python manage.py migrate`
+
+
+
+views.py
+
+```python
+@login_required
+@require_POST
+def create_posting(request):
+    form = PostingModelForm(request.POST, request.FILES)  # 검증 & 저장 준비
+    if form.is_valid():  # 검증!
+        posting = form.save(commit=False)  # 저장 => Posting 객체 return  /  posting은 변수
+        posting.user = request.user  # anonymous
+        posting.save()
+        return redirect(posting)  # 성공하면 detail page
+    else:
+        return redirect('sns:posting_list')  # 실패하면 list page
+```
+
+```python
+@login_required
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    form = CommentModelForm(request.POST)  # content 만 값을 확인
+    if form.is_valid():  # content 만 값을 검증
+        comment = form.save(commit=False)  # 아직 posting_id 가 비어있기 때문에, 저장하는 '척' 만 하고 Comment 객체 return
+        # comment.posting_id = posting.id
+        comment.posting = posting  # 위 코드와 같음
+        comment.user = request.user
+        comment.save()
+    return redirect(posting)
+```
+
+
+
+posting_detail.html - <p class="card-text">{{posting.user.username }}</p>추가
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block detail %}active{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+      <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+      {% else %}
+      <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <i class="{{ posting.icon }} fa-3x"></i>
+        <hr>
+        <div class="row">
+          <div class="col-11">
+            {% comment %} 아래 posting.user라고 써도 됨 {% endcomment %}
+            <p class="card-text">{{posting.user.username }}</p>
+            <p class="card-text">{{ posting.content }}</p>
+          </div>
+          <div class="col-1">
+            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
+    </div>
+  </div>
+
+  {% include 'sns/_comment.html' %}
+
+</div>
+{% endblock %}
+```
+
+
+
+_comment.html
+
+```html
+<div class="col-12 col-md-6">
+
+    <div class="card mb-2">
+        <div class="card-body">
+            <form action="{% url 'sns:create_comment' posting.id %}" method="POST">
+                {% csrf_token %}
+                <label for="comment"><strong>{{request.user}}</strong>, leave comment</label>
+                <input type="text" name="content" id="comment" class="form-control" autofocus>
+            </form>
+        </div>
+    </div>
+
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            {% if comments %}
+            {% for comment in comments %}
+            {% comment %} comment 쓴 사람 {% endcomment %}
+            {% comment %} {{ comment.user }}  SELECT * FROM user WHERE id=comment.user.id {% endcomment %}
+            {% comment %} 댓글이 달린 글의 작성자 {% endcomment %}
+            {% comment %} {{ comment.posting.user }}  SELECT * FROM user WHERE id=comment.posting.user.id {% endcomment %}
+            <li class='list-group-item mb-1'>{{ comment.user }}{{forloop.counter}}: {{ comment.content }}</li>
+            {% endfor %}
+            {% else %}
+            <li class='list-group-item mb-1'>No comments yet..</li>
+            {% endif %}
+
+        </ul>
+    </div>
+
+</div>
+```
+
+
+
+_comment.html
+
+```html
+<div class="col-12 col-md-6">
+
+    <div class="card mb-2">
+        <div class="card-body">
+            <form action="{% url 'sns:create_comment' posting.id %}" method="POST">
+                {% csrf_token %}
+                <label for="comment"><strong>{{ user }}</strong>, leave comment</label>
+                <input type="text" name="content" id="comment" class="form-control" autofocus>
+            </form>
+        </div>
+    </div>
+
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            {% if comments %}
+            {% for comment in comments %}
+            {% comment %} comment 쓴 사람 {% endcomment %}
+            {% comment %} {{ comment.user }}  SELECT * FROM user WHERE id=comment.user.id {% endcomment %}
+            {% comment %} 댓글이 달린 글의 작성자 {% endcomment %}
+            {% comment %} {{ comment.posting.user }}  SELECT * FROM user WHERE id=comment.posting.user.id {% endcomment %}
+            <li class='list-group-item mb-1'>{{ comment.user }}{{forloop.counter}}: {{ comment.content }}</li>
+            {% endfor %}
+            {% else %}
+            <li class='list-group-item mb-1'>No comments yet..</li>
+            {% endif %}
+
+        </ul>
+    </div>
+
+</div>
+```
+
+
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block detail %}active{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+      <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+      {% else %}
+      <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <i class="{{ posting.icon }} fa-3x"></i>
+        <hr>
+        <div class="row">
+          <div class="col-11">
+            {% comment %} 아래 posting.user라고 써도 됨 {% endcomment %}
+            <p class="card-text">{{ posting.user.username }}</p>
+            <p class="card-text">{{ posting.content }}</p>
+          </div>
+          <div class="col-1">
+            {% if user == posting.user %}
+            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+            {% endif %}
+          </div>
+        </div>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
+    </div>
+  </div>
+
+  {% include 'sns/_comment.html' %}
+
+</div>
+{% endblock %}
+```
+
+
+
+sns views.py
+
+```python
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.user == posting.user:
+        posting.delete()
+    return redirect('sns:posting_list')
+```
+
+
+
+_header.html
+
+```html
+{% if user.is_authenticated %}
+<header class="mt-4">
+    <form action="{% url 'sns:create_posting' %}" enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        <div class="form-row align-items center">
+            <div class="col-auto my-1">
+                <!-- icon select tag -->
+                <label for="icon" class="sr-only">icon</label>            
+                <select name="icon" id="icon" class="custom-select mr-sm-2">
+                    <option value="fas fa-question">?</option>
+                    <option value="far fa-smile">:)</option>
+                    <option value="far fa-angry">:(</option>
+                    <option value="far fa-smile-wink">;)</option>
+                    <option value="fab fa-angrycreative">flex</option>
+                </select>
+            </div>
+            <!-- content input tag -->
+            <div class="col-sm-6 my-1">
+                <label for="content" class="sr-only">content</label>
+                <input id="content" type='text' name='content' class="form-control" placeholder="feels like..">
+            </div>
+           
+            <!-- image file input -->
+            <div class="col-sm-4 my-1 input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">Upload</span>
+                </div>
+
+                <div class="custom-file">
+                    <input id="image" class="custom-file-input" name="image" type="file" accept="image/*">
+                    <label for="image" class="custom-file-label">Choose image</label>
+                </div>
+            </div>
+
+            <!-- submit button -->
+            <div class="col-auto my-1">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
+    </form>
+</header>
+{% endif %}
+```
+
